--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 # banco de dados h2  
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#PORTAO
+server.port=8082
