--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.main.banner-mode=off
 
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=root
-spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
+spring.datasource.username=portafolio
+spring.datasource.password=123
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # HikariCP settings
 # spring.datasource.hikari.*
