--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.main.banner-mode=off
 
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=portafolio
+spring.datasource.username=portafolio2
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
