--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<version>5.4.9.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
